# SplitMate

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.py  docker-compose.yml  models.py  pyproject.toml  railway.toml  requirements.txt
docs/: .gitkeep
splitmate/: __init__.py  app_factory.py  config.py
splitmate/api/: v1.py
splitmate/line/: __init__.py  bot.py
splitmate/services/: bill_service.py  group_service.py  mentions.py  seed.py  settlement_service.py  split_engine.py
splitmate/web/: routes.py
static/css/: app.css
static/js/: dashboard.js  landing.js
templates/: dashboard.html  index.html  not_found.html
tests/: test_core.py
