[tool.poetry]
name = "splitmate"
version = "0.1.0"
description = "SplitMate — LINE 記帳、網頁結算"
authors = ["SplitMate"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
flask = "^3.0.0"
gunicorn = "^21.2.0"
line-bot-sdk = "^3.17.1"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
